<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/screenshotContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/overlay_scrim"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_s">

        <TextView
            android:id="@+id/selectionCountText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/overlay_hint"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/discardButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overlay_discard"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/overlay_save"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/attributePanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/spacing_m"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="240dp">

            <LinearLayout
                android:id="@+id/attributeListContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_m" />
        </ScrollView>
    </androidx.cardview.widget.CardView>
</FrameLayout>
